@@ -82,9 +82,8 @@ fi
 
 dnl# Checks for header files.
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(unistd.h time.h math.h pwd.h sys/types.h)
+AC_CHECK_HEADERS(unistd.h time.h math.h pwd.h sys/types.h varargs.h stdarg.h)
 AC_HEADER_TIME
-AC_CHECK_HEADER(stdarg.h, AC_DEFINE(HAVE_STDARGS))
 
 dnl# Missing typedefs and replacements
 AC_TYPE_MODE_T
