@@ -508,3 +508,9 @@ Fri Nov 12 19:14:21 GMT 1999
 
 More E-SD.c changes. Should be better, but let me know if any lag occurs.
 
+-------------------------------------------------------------------------------
+
+Fri Nov 12 12:35:49 PST 1999
+(KainX)
+
+Cleaning up the epplets is becoming a morning routine for me.... =P
